--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,9 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
+# Matlab autosave files
+*.asv
+
 # =========================
 # Operating System Files
 # =========================
