--- a/.gitignore
+++ b/.gitignore
@@ -18,9 +18,9 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
-# Matlab autosave files
+# Matlab autosave files and data files
 *.asv
-
+*.mat
 # =========================
 # Operating System Files
 # =========================
