Revert "Merge branch 'master' into croft-2013"
This reverts commit 85a4a91adb0dbe8ffc1bde6edab329a7f3fbde58, reversing
changes made to 3109d8557253716148c3d2a788a4d12aa940fb57.

--- a/.gitignore
+++ b/.gitignore
@@ -18,9 +18,9 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
-# Matlab autosave files and data files
+# Matlab autosave files
 *.asv
-*.mat
+
 # =========================
 # Operating System Files
 # =========================
