Add zip files to ignore list
Added .zip to the ignore list for git.

--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,10 @@ $RECYCLE.BIN/
 # Matlab autosave files and data files
 *.asv
 *.mat
+
+# Zip files
+*.zip
+
 # =========================
 # Operating System Files
 # =========================
