--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,10 @@ ehthumbs_vista.db
 # Folder config file
 Desktop.ini
 
+# Data files
+*.csv
+*.txt
+
 # Recycle Bin used on file shares
 $RECYCLE.BIN/
 
@@ -24,6 +28,12 @@ $RECYCLE.BIN/
 
 # Zip files
 *.zip
+
+
+# Figures
+*.pdf
+*.fig
+*.ai
 
 # =========================
 # Operating System Files
